--- a/config.json
+++ b/config.json
@@ -10,6 +10,9 @@
     "blog_name": "Coding Thunder",
     "tag_line": "Heaven for programmers",
     "about_text": "Hi my name is harry and I create programming tutorials and I am a good boy",
-    "no_of_posts": 3
+    "no_of_posts": 3,
+    "login_image":"login.svg",
+    "admin_user":"gunjan",
+    "admin_password": "123"
   }
 }
