--- a/config.json
+++ b/config.json
@@ -7,12 +7,14 @@
     "fb_url":"https://facebook.com/codingthunder",
     "tw_url":"https://twitter.com/codingthunder",
     "gh_url": "https://github.com/codingthunder",
-    "blog_name": "Coding Thunder",
-    "tag_line": "Heaven for programmers",
+    "blog_name": "Clean Energy",
+    "tag_line": "The future",
     "about_text": "Hi my name is harry and I create programming tutorials and I am a good boy",
     "no_of_posts": 3,
     "login_image":"login.svg",
     "admin_user":"gunjan",
-    "admin_password": "123"
+    "admin_password": "123",
+    "upload_location":"D:\\Project\\Flask\\Clean Blog\\static\\uploaded"
+
   }
 }
