almost done, modifided UI, added responsiveness to login , added posts, added categories,image uploading

--- a/config.json
+++ b/config.json
@@ -7,10 +7,10 @@
     "fb_url":"https://facebook.com/codingthunder",
     "tw_url":"https://twitter.com/codingthunder",
     "gh_url": "https://github.com/codingthunder",
-    "blog_name": "Clean Energy",
-    "tag_line": "The future",
+    "blog_name": "The Bloggers",
+    "tag_line": "Find the blogger inside you",
     "about_text": "Hi my name is harry and I create programming tutorials and I am a good boy",
-    "no_of_posts": 3,
+    "no_of_posts": 5,
     "login_image":"login.svg",
     "admin_user":"gunjan",
     "admin_password": "123",
